# tapest-client

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  sonar-project.properties
include/rhel9/SOURCES/: ice_api_client-METADATA  ice_api_client-RECORD  ice_api_client.py
include/rhel9/SPECS/: python-tapest-client.spec.m4  python3-tapest-ice-api-client.spec.m4
tapest_client/: __init__.py  cli.py  client.py  config.py
tests/: cli_test.py  client_api_test.py  client_utils_test.py  config_test.py  conftest.py  example_test.py
tests/benchmark/: benchmark_checksum_test.py
