[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "tapest_client/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: slow tests such as benchmarks (skipped unless --run-slow is given)",
]
