[metadata]
name = tapest-client
description = TapeSt API command-line tool and client library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Digital-Preservation-Finland/tapest-client
setup_requires =
    setuptools_scm
license = AGPL-3.0-or-later
license_file = LICENSE
author = CSC — IT Center for Science
author_email = pas-support@csc.fi
platforms = linux
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
setup_requires =
    setuptools-scm
python_requires = >=3.9
install_requires =
    certifi
    platformdirs
    requests
    tuspy @ git+https://github.com/tus/tus-py-client.git@e786fa850f0d8e0a2bd137dd91b5fef7c7b703a7

[options.extras_require]
testing =
    pytest
    pytest-benchmark

[options.entry_points]
console_scripts =
    tapest-client = tapest_client.cli:main

[options.packages.find]
exclude = tests*
